test/fail/enums_and_variants/match_else_too_early.lily
#[
SyntaxError: 'else' cannot be the only clause within a match.
    from match_else_too_early.lily:7:
]#

match Some(1): {
    else:
}
